[gd_scene load_steps=8 format=3 uid="uid://dy86jscp34qbw"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_q8fmx"]
[ext_resource type="Script" path="res://scripts/ui/level_editor.gd" id="1_u4qq4"]
[ext_resource type="PackedScene" uid="uid://csaksgm2iybd6" path="res://scenes/level.tscn" id="3_kxfvp"]
[ext_resource type="Texture2D" uid="uid://djqd38dew15d0" path="res://assets/arrows/arrow_up.svg" id="5_2736c"]
[ext_resource type="Texture2D" uid="uid://bioi7023fdf0k" path="res://assets/arrows/arrow_down.svg" id="6_d3gbo"]
[ext_resource type="PackedScene" uid="uid://bswmhrvghcrj4" path="res://scenes/ui/orientation_select.tscn" id="7_uehy5"]
[ext_resource type="PackedScene" uid="uid://b02r6574rp0fy" path="res://scenes/ui/type_select.tscn" id="8_87ve6"]

[node name="LevelEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4qq4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LeftBar" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.180392, 0.188235, 0.286275, 1)

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(720, 936)
layout_mode = 2

[node name="Selector" type="ColorRect" parent="VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 72)
layout_mode = 1
offset_right = 72.0
offset_bottom = 72.0
color = Color(1, 0, 0, 0.075)

[node name="Game" type="Node2D" parent="VBoxContainer/HBoxContainer/Control"]
z_index = -1
script = ExtResource("1_q8fmx")

[node name="Level" parent="VBoxContainer/HBoxContainer/Control/Game" instance=ExtResource("3_kxfvp")]
unique_name_in_owner = true

[node name="GameArea" type="GridContainer" parent="VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="RightBar" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.180392, 0.188235, 0.286275, 1)

[node name="BottomBar" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="VBoxContainer/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.180392, 0.188235, 0.286275, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="LineEdit" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Name"
max_length = 63
expand_to_text_length = true

[node name="Save" type="Button" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
text = "Save"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Add" type="Button" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Add"

[node name="Remove" type="Button" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Remove"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Up" type="Button" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("5_2736c")

[node name="Down" type="Button" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("6_d3gbo")

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OrientationSelect" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("7_uehy5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
disabled = true

[node name="TypeSelect" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("8_87ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
disabled = true

[node name="Health" type="SpinBox" parent="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 99.0
value = 1.0
rounded = true
editable = false
suffix = "hp"

[connection signal="text_submitted" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer4/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer4/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer2/Up" to="." method="_move" binds= [-1]]
[connection signal="pressed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer2/Down" to="." method="_move" binds= [1]]
[connection signal="item_selected" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3/OrientationSelect" to="." method="_on_orientation_select_item_selected"]
[connection signal="item_selected" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3/TypeSelect" to="." method="_on_type_select_item_selected"]
[connection signal="value_changed" from="VBoxContainer/BottomBar/MarginContainer/HBoxContainer/VBoxContainer3/Health" to="." method="_on_health_value_changed"]
